# Battleship

./: Dockerfile  Makefile  Readme.md  pyproject.toml  requirements.txt
battleship/: Dockerfile  manage.py
battleship/battleship/: asgi.py  settings.py  urls.py  wsgi.py
battleship/games/: constants.py  models.py  serializers.py  urls.py  utils.py  views.py
battleship/games/migrations/: 0001_initial.py
battleship/users/: urls.py  views.py
client/: Dockerfile  commands.py  config.py  game.py  main.py  utils.py
